@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+17-Jul-2013 Jean-Marie Simonet
+ # [#31476] Remove unneeded GROUP BY and fix duplicate article display. Thanks Thomas Hunziker
+
 14-Jul-2013 Jean-Marie Simonet
  # [#31455] Regression by [#31278]. Thanks Beat
 
